--- a/TimerSystem/MainWindow.xaml
+++ b/TimerSystem/MainWindow.xaml
@@ -10,6 +10,7 @@
         <Label Name="LabelTime" Content="00:00:000" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="227,80,250,0" TextOptions.TextFormattingMode="Display" FontSize="72"/>
         <Button Name="ButtonToggleState" Content="Start" HorizontalAlignment="Left" Margin="250,250,0,0" VerticalAlignment="Top" Width="75" Click="ButtonToggleState_Click"/>
         <ComboBox Name="ComboBoxComPort" HorizontalAlignment="Left" Margin="662,10,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button Content="Settings" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
 
     </Grid>
 </Window>
