--- a/TimerSystem/MainWindow.xaml
+++ b/TimerSystem/MainWindow.xaml
@@ -7,10 +7,14 @@
         mc:Ignorable="d"
         Title="Timer" Height="450" Width="800">
     <Grid>
-        <Label Name="LabelTime" Content="00:00:000" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="223,80,237,0" TextOptions.TextFormattingMode="Display" FontSize="72" Width="332"/>
-        <Button Name="ButtonToggleState" Content="Start" HorizontalAlignment="Left" Margin="250,250,0,0" VerticalAlignment="Top" Width="75" Click="ButtonToggleState_Click"/>
-        <ComboBox Name="ComboBoxComPort" HorizontalAlignment="Left" Margin="662,10,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button Content="Settings" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Label Name="LabelTime" Content="00:00:000" HorizontalAlignment="Center" VerticalAlignment="Top"
+               Margin="223,80,237,0" TextOptions.TextFormattingMode="Display" FontSize="72" Width="332" />
+        <Button Name="ButtonToggleState" Content="Start" HorizontalAlignment="Left" Margin="250,250,0,0"
+                VerticalAlignment="Top" Width="75" Click="ButtonToggleState_Click" />
+        <ComboBox Name="ComboBoxComPort" HorizontalAlignment="Left" Margin="662,10,0,0" VerticalAlignment="Top"
+                  Width="120" />
+        <Button Content="Settings" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Width="75"
+                Click="Button_Click" />
 
     </Grid>
 </Window>
